--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,6 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         goos: ${{ matrix.goos }}
         goarch: ${{ matrix.goarch }}
-        goversion: "latest"
+        goversion: "https://go.dev/dl/go1.21.3.linux-amd64.tar.gz"
         binary_name: "excemplate"
         extra_files: LICENSE README.md
